posting coding test study

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,9 +12,13 @@
   #   url: /sitemap/
 
 sidebar-category:
-  - title: "Category"
-    children:
-      - title: "Coding Test"
-        url: "/CodingTest"
-      - title: "Programming"
-        url:  "/Programming"
+  # - title: "Category"
+  #   children:
+  #     - title: "Coding Test"
+  #       url: "/CodingTest"
+  #     - title: "Programming"
+  #       url:  "/Programming"
+  - title: "🤯 Coding Test"
+    url: "/CodingTest"
+  - title: "🧑🏻‍💻 Programming"
+    url:  "/Programming"
