Add post & Modify post date

--- a/_config.yml
+++ b/_config.yml
@@ -286,7 +286,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      # read_time: true
+      show_date: true
       comments: true
       share: true
       related: true
