--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Install Jekyll and dependencies
       run: |
         gem install jekyll bundler
+        bundle config set --local path 'vendor/bundle'
         bundle install
 
     - name: Build site with Jekyll
