곧 만나요 소개글 포스팅

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,3 +22,5 @@ sidebar-category:
     url: "/CodingTest"
   - title: "🧑🏻‍💻 Programming"
     url:  "/Programming"
+  - title: "📱 Apps"
+    url:  "/Apps"
